--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <option>5 stars</option>
 
             </select>
-            <input class="newTvShowInfo" type="submit" value="add" id="addButton" disabled>
+            <input class="newTvShowInfo" type="submit" value="add" id="addButton" >
         </div>
         <div class="listWraper">
             <div></div>
