--- a/details.html
+++ b/details.html
@@ -1,1 +1,50 @@
-s
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="details.js"></script>
+
+</head>
+
+<body>
+    <div class="pageWraper">
+        <div class="topLine topLine2">
+            <div></div>
+            <div></div>
+            <div>
+                <h1 id="webSiteHedding">myTVshows<span id="smallFont">.com</span></h1>
+            </div>
+            <div></div>
+            <div>
+            </div>
+        </div>
+        <div class="theNameInBig">
+
+        </div>
+        <div class="listWraper">
+            <div></div>
+            <div id="ulWraper1">
+                <div class="title">
+
+                    <div class="flex1">Season</div>
+                    <div class="flex1">Episod</div>
+                    <div class="flex1">Rating</div>
+                    <div class="flex1">Date added</div>
+                    <div class="flex1">Status</div>
+                    <div class="flex1">Details</div>
+                    <div class="flex1">Trailer</div>
+                </div>
+                <ul class="theListOfShows"></ul>
+            </div>
+            <div></div>
+        </div>
+
+    </div>
+</body>
+
+</html>
